# setuptools-protobuf

./: .flake8  .gitignore  MANIFEST.in  README.md  disperse.conf  disperse.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: exampletest.yml  python-distributions.yml  pythontest.yml
example/: .gitignore  README.md  pyproject.toml
example/example/: __init__.py  __main__.py
example_src_layout/: README.md  pyproject.toml
example_src_layout/src/example_src_layout/: __init__.py  __main__.py  bar.proto  foo.proto
setuptools_protobuf/: __init__.py
tests/: test_protobuf.py
