[metadata]
name = setuptools-protobuf
version = attr: setuptools_protobuf.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
license = Apachev2
description = Setuptools protobuf extension plugin
keywords = distutils, setuptools, protobuf
url = https://github.com/jelmer/setuptools-protobuf
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Topic :: Software Development :: Version Control
	License :: OSI Approved :: Apache License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows

[options]
packages = setuptools_protobuf
zip_safe = True
install_requires = setuptools>=46.1
setup_requires = setuptools>=46.1
python_requires = >=3.6

[options.entry_points]
# TODO(jelmer): Provide clean command
distutils.commands =
	build_protobuf=setuptools_protobuf:build_protobuf
